Started on some minor content

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,13 @@
   <body>
   
     <header>
-      Brett
+      <h1>brett.</h1>
     </header>
+
+    <section class="full-screen">
+      <h1>Hi, I'm Brett.</h1>
+      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. Husband to a beautiful wife. Father of two amazing boys. </p>
+    </section>
 
   </body>
 </html>
