Small gradient background

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <h1>brett.</h1>
     </header>
 
-    <section class="full-screen">
+    <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
       <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. Husband to a beautiful wife. Father of two amazing boys. </p>
     </section>
