--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
-      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. Husband to a beautiful wife. Father of two amazing boys. </p>
+      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a> for the past thirteen years. Husband to a beautiful wife. Father of two amazing boys. </p>
     </section>
 
   </body>
