Added some FontAwesome

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/ec6ddacbdf.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brett Baisley</title>
@@ -15,7 +16,12 @@
 
     <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
-      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a> for the past thirteen years. Husband to a beautiful wife. Father of two amazing boys. </p>
+      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a> for the past thirteen years. I am a husband
+         to a beautiful wife and a father of two amazing boys.</p>
+      <ul class="social">
+        <li><a href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://github.com/brettbaisley"><i class="fab fa-github-square"></i></a></li>
+      </ul>
     </section>
 
   </body>
