--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
 
     <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
-      <p>I am a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a> for the past thirteen years. I am a husband
-         to a beautiful wife and a father of two amazing boys.</p>
+      <p>I received my Bachelor of Computer Science from the <a href="http://unb.ca">University of New Brunswick</a>. 
+         I moved to Halifax, NS to become a consultant at Keane. I relocated to New York, NY after accepting a 
+         full-time reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. 
+         I am a husband to a beautiful wife and a father of two amazing boys.</p>
       <ul class="social">
         <li><a href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
         <li><a href="https://github.com/brettbaisley"><i class="fab fa-github-square"></i></a></li>
