--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
       <p>I received my Bachelor of Computer Science from the <a href="http://unb.ca">University of New Brunswick</a>. 
-         I moved to Halifax, NS to become a consultant at Keane. I relocated to New York, NY after accepting a 
+         I moved to Halifax, NS to become a consultant at <a href="http://us.nttdata.com">Keane</a>. I relocated to New York, NY after accepting a 
          full-time reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. 
          I am a husband to a beautiful wife and a father of two amazing boys.</p>
       <ul class="social">
