--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,15 @@
 
     <section class="masthead">
       <h1>Hi, I'm Brett.</h1>
-      <p>I received my Bachelor of Computer Science from the <a href="http://unb.ca">University of New Brunswick</a>. 
-         I moved to Halifax, NS to become a consultant at <a href="http://us.nttdata.com">Keane</a>. I relocated to New York, NY after accepting a 
-         full-time position as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>. 
-         I am a husband to a beautiful wife and a father of two amazing boys.</p>
+      <p>I received my Bachelor of Computer Science from the <a href="https://unb.ca">University of New Brunswick</a>. 
+         I moved to Halifax, NS to become a consultant at <a href="https://us.nttdata.com">Keane</a>. I relocated to 
+         New York, NY after accepting a full-time position as a reliability and production engineer at 
+         <a href="https://morganstanley.com">Morgan Stanley</a>.</p>
+         <p>I am a husband to a beautiful wife and a father of two amazing boys.</p>
       <ul class="social">
-        <li><a href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
         <li><a href="https://github.com/brettbaisley"><i class="fab fa-github-square"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://twitter.com/brettbaisley"><i class="fab fa-twitter-square"></i></a></li>
       </ul>
     </section>
 
