--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,38 @@
       <h1>Brett Baisley</h1>
     </header>
 
-    <section class="masthead">
-      <h1>Hi, I'm Brett.</h1>
-      <p>I received my Bachelor of Computer Science from the <a href="https://unb.ca">University of New Brunswick</a>. 
-         I moved to New York where I am currently a reliability and production engineer at 
-         <a href="https://morganstanley.com">Morgan Stanley</a>.
-      </p>
-      <p>I am always looking to learn something new, which lately is building my first site using the React framework.</p>  
-      <p>I am a husband to a beautiful wife and a father of two amazing boys.</p>
-      <div class="down-icon look-down"><a href="#about"><i class="fas fa-angle-double-down"></i></a></div>
+    <section class="hero">
+      <h1 class="title">Hi, I'm Brett.</h1>
+      <h2 class="subtitle">Something catchy here.</h2>
+      <!-- <img class="avatar" src="img/bb-avatar.svg"> -->
     </section> 
 
-    <section id="about" class="about">
-      <h1>About me</h1>
-      <p>
-        I have been using computers for as long as I can remember. I started out played games on Commodores 64 and 128, wrote my first homework assignment 
-        on an Amiga 2000, and created my first website on a off-brand PC with Intel 386 chip.
-      </p>
-      <p>
-        I was often considered the family and friends technician, repairing computers in the evening/weekends. I have built a few custom gaming machines over the years.
-      </p>
-      <p>
-        These days, I am more focused on the software side of things. As a reliability and production engineer at Morgan Stanley, I work to ensure the 
-        securities lending platform remains operational at all times. This involves writing scripts to automate repetative tasks, perform 
-        incident/problem management to ensure issues don't reoccur, and support the business by answering questions and resolving one-off issues.
-      </p>
+    <section class="primary">
+      <h1 class="title"> Hi, I'm Brett.</h1>
+      <div class="subtitle">I received my Bachelor of Computer Science from the <a href="https://unb.ca">University of New Brunswick</a>. 
+         I moved to New York where I am currently a reliability and production engineer at 
+         <a href="https://morganstanley.com">Morgan Stanley</a>.</div>
+      
+      <!-- <p>I am always looking to learn something new, which lately is building my first site using the React framework.</p>  
+      <p>I am a husband to a beautiful wife and a father of two amazing boys.</p> -->
+    </section>
+
+    <section class="about">
+      <div class="inlay-box">
+        <h1>About me</h1>
+        <p>
+          I have been using computers for as long as I can remember. I started out played games on Commodores 64 and 128, wrote my first homework assignment 
+          on an Amiga 2000, and created my first website on a off-brand PC with Intel 386 chip.
+        </p>
+        <p>
+          I was often considered the family and friends technician, repairing computers in the evening/weekends. I have built a few custom gaming machines over the years.
+        </p>
+        <p>
+          These days, I am more focused on the software side of things. As a reliability and production engineer at Morgan Stanley, I work to ensure the 
+          securities lending platform remains operational at all times. This involves writing scripts to automate repetative tasks, perform 
+          incident/problem management to ensure issues don't reoccur, and support the business by answering questions and resolving one-off issues.
+        </p>
+      </div>
     </section>
     
     <footer>
