--- a/public/index.html
+++ b/public/index.html
@@ -38,17 +38,24 @@
         
         <div class="flex-container">
           <div class="role">
-            <h1 class="subtitle">Support Engineer</h1>
+            <h1 class="subtitle margin-bottom">Support Engineer</h1>
             <ol>
-              <li>18 years experience</li>
+              <li>18 years experience working at a financial institution.</li>
+              <li>Supported various applications, from authoring platform to securities lending trading platform.</li>
+              <li>Performed incident and problem management to reduce number of incidents.</li>
+              <li>Alert reduction, reduce noise by preventing false alerts.</li>
+              <li>Automated ready-for-business checks and other manual tasks.</li>
+              <li>Created support documentation and trained new hires.</li>
+              <li>Onboarded new applications to our global team, such as PagerDuty.</li>
             </ol>
           </div>
 
           <div class="role">
-            <h1 class="subtitle">Front-end Developer</h1>
-            <p>I like to build websites.</p>
+            <h1 class="subtitle margin-bottom">Front-end Developer</h1>
             <ol>
-              <li>10 years experience</li>
+              <li>10 years experience, mostly at a small startup and a local newspaper.</li>
+              <li> Started creating sites in high school, took a bit of a hiatus, now picking it up again.</li>
+              <li>Currently learning the React framework, and the latest JavaScript features.</li>
             </ol>
           </div>
         </div>
@@ -78,7 +85,7 @@
         <li><a class="invert-link-color" href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
         <li><a class="invert-link-color" href="https://twitter.com/brettbaisley"><i class="fab fa-twitter-square"></i></a></li>
       </ul>  
-      <p class="center">Made with ♡ in New York</p>
+      <p class="center">Made by me in New York</p>
     </footer>
 
   </body>
