Starting dark mode

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <section class="hero">
       <h1 class="title title-large">Hi, I'm Brett.</h1>
-      <h2 class="subtitle subtitle-large">Support Engineer by day / Web Designer at night</h2>
+      <h2 class="subtitle subtitle-large">Support Engineer by Day / Web Designer at Night</h2>
       <!-- <img class="avatar" src="img/bb-avatar.svg"> -->
     </section> 
 
