Minor tweaks to color

--- a/public/index.html
+++ b/public/index.html
@@ -81,9 +81,9 @@
     
     <footer class="section">
       <ul class="social title-large">
-        <li><a class="invert-link-color" href="https://github.com/brettbaisley"><i class="fab fa-github-square"></i></a></li>
-        <li><a class="invert-link-color" href="https://www.linkedin.com/in/brettbaisley/"><i class="fab fa-linkedin"></i></a></li>
-        <li><a class="invert-link-color" href="https://twitter.com/brettbaisley"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a class="invert-link-color" href="https://github.com/brettbaisley" aria-label="Brett's GitHub Repository"><i class="fab fa-github-square"></i></a></li>
+        <li><a class="invert-link-color" href="https://www.linkedin.com/in/brettbaisley/" aria-label="Brett's LinkedIn Profile"><i class="fab fa-linkedin"></i></a></li>
+        <li><a class="invert-link-color" href="https://twitter.com/brettbaisley" aria-label="Brett's Twitter Profile"><i class="fab fa-twitter-square"></i></a></li>
       </ul>  
       <p class="center">Made by me in New York</p>
     </footer>
