--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <script src="https://kit.fontawesome.com/ec6ddacbdf.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
