TEST: edited in github.dev

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@ Switched teams to support Securities Lending.
 
 2040s
 Retired.
+Went to https://github.dev/brettbaisley/brettbaisley.com/ and made changes directly into "redo" branch.
     
     
 
