Minor changes to try some things

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,19 @@
   </head>
   
   <body>
-  
-Hello, I'm Brett.
-Support Engineer / Front-end Designer
 
+    <!--
+      <nav role="navigation" aria-label="Main Menu">
+        <ul class="navbar">
+          <li><a href="#">Link</li>
+        </ul>
+      </nav>
+    -->
+
+<div class="section section-hero">
+  <h1>Hello, I'm Brett.</h1>
+  <h2>Support Engineer / Front-end Designer</h2>
+</div>
 
 
 What I Do       
@@ -39,26 +48,37 @@ Front-end Developer
 
 A bit about me
 &lt;2000
-I have been using computers for as long as I can remember. I started out playing games on a Commodore 64. Typed my first homework assignment on an Amiga 2000. Created my first website on a off-brand PC with Intel 386 chip.
-I would often spend evenings and weekends repairing or building desktops for friends and family.
+<ul>
+  <li>I started out playing games on a Commodore 64.</li>
+  <li>Typed my first homework assignment on an Amiga 2000.</li>
+  <li>Created my first website using an Intel 386 PC.</li>
+  <li>Spent evenings and weekends repairing/building desktops for family and friends.</li>
+  <li>Worked as a front-end designer for the local newspaper.</li>
+</ul>
 
-2000*
-I received my Bachelor of Computer Science from the <a href="https://unb.ca">University of New Brunswick</a>.
-Started my career as a consultant in Halifax, NS
-Moved to New York City.
-Hired as a reliability and production engineer at Morgan Stanley.
+2000+
+<ul>
+  <li>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
+  <li>Moved to Halifax, Nova Scotia.</li>
+  <li>Started my career as a reliability and production engineer at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
+  <li>Moved to New York City.</li>
+  <li>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
+</ul>
 
 2010+
-Got married.
-Bought my first house.
-Became a father to two boys.
+<ul>
+  <li>Got married to my wonderful wife, Enerlise.</li>
+  <li>Bought our first house.</li>
+  <li>Became a father to two boys, Mateo and Lucas.</li>
+</ul>
+
 
 2020+
-Switched teams to support Securities Lending.
+<ul>
+  <li>Switched teams to support Securities Lending platform.</li>
+  <li>Spent a lot of time at home due to COVID-19.</li>
+</ul>
 
-2040s
-Retired.
-Went to https://github.dev/brettbaisley/brettbaisley.com/ and made changes directly into "redo" branch.
     
     
 
