--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="https://kit.fontawesome.com/ec6ddacbdf.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brett Baisley - Work In Progress</title>
+    <title>=Brett Baisley - Work In Progress</title>
     <link rel="stylesheet" href="style.css">
   </head>
   
