Little Know Fact

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     -->
 
 <div class="section section-hero">
-  <h1>Hello, I'm Brett.</h1>
-  <h2>Support Engineer</h2>
+  <h1>Hello, I'm&nbsp;Brett.</h1>
+  <h2>Software/Support Engineer</h2>
 </div>
 
 <section>
@@ -77,9 +77,12 @@
 </section>
     
     
-<aside>
-  <h3>Fun Fact</h3>
-  <p>I had a photo published in the <time date="2007-05-01">May 2017</time> issue of WestJet Magazine.</p>
+<aside class="fun-fact">
+  <div>
+    <h3>Little Known Fact</h3>
+    <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>.</p>
+    </div>
+  <img src="images/westjet-mag-05-17-cover.jpeg" alt="WestJet Magazine May 2017 Cover">
 </aside>
    
 
