--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
       </nav>
     -->
 
-<div class="section section-hero">
+<header class="section hero">
   <h1>Hello, I'm&nbsp;Brett.</h1>
   <h2>Software/Support Engineer</h2>
-</div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptas iste, rem nihil sunt illum soluta error esse ipsa enim, dignissimos perferendis ducimus consequuntur. Alias voluptatem autem harum ipsa debitis.</p>
+</header>
 
 <section>
   <h2>What I Do</h2>
-    <h3>Support Engineer</h3>
     <ol>
       <li>18 years experience working at a financial institution.</li>
       <li>Supported various applications, from authoring platforms to securities lending trading platform.</li>
