--- a/public/index.html
+++ b/public/index.html
@@ -41,47 +41,49 @@
 </section>
 
 
-<section>
-  <h2>A bit about me</h2>
-    <h3>1990's</h3>
-    <ul>
-      <li><i class="fal fa-gamepad"></i>I started out playing games on a Commodore 64.</li>
-      <li><i class="fal fa-typewriter"></i>Typed my first homework assignment on an Amiga 2000.</li>
-      <li><i class="fal fa-browser"></i>Created my first website using an Intel 386 PC.</li>
-      <li><i class="fal fa-wrench"></i>Spent evenings and weekends repairing/building desktops for family and friends.</li>
-      <li><i class="fal fa-newspaper"></i>Worked as a front-end designer for the local newspaper.</li>
+<section class="history">
+  <h2>Brief History</h2>
+    <h3>1990's - where it all began</h3>
+    <ul class="about-decade">
+      <li><i class="fal fa-gamepad"></i>Played games on a Commodore 64.</li>
+      <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
+      <li><i class="fal fa-browser"></i>Created websites using an Intel 386 PC.</li>
+      <li><i class="fal fa-wrench"></i>Spent weekends repairing/building desktops for family and friends.</li>
+      <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
 
-    <h3>2000's</h3>
-    <ul>
+    <h3>2000's - beginning of my career</h3>
+    <ul class="about-decade">
       <li><i class="fal fa-diploma"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
-      <li><i class="fal fa-map-signs"></i>Moved to Halifax, Nova Scotia.</li>
+      <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
       <li><i class="fal fa-desktop"></i>Started my career as a reliability and production engineer at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to New York City.</li>
       <li><i class="fal fa-laptop-code"></i>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
     </ul>
 
-    <h3>2010's</h3>
-    <ul>
+    <h3>2010's - embraced adulthood</h3>
+    <ul class="about-decade">
       <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
       <li><i class="fal fa-house"></i>Bought our first house.</li>
       <li><i class="fal fa-child"></i>Became a father to two boys, Mateo and Lucas.</li>
     </ul>
 
 
-    <h3>2020's</h3>
-    <ul>
+    <h3>2020's - no time like the present</h3>
+    <ul class="about-decade">
       <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
+      <li><i class="fa-brands fa-react"></i>Learning the React library.</li>
+      <li><i class="fa-brands fa-microsoft"></i>Currently studying for an Azure certificate.</li>
     </ul>
 </section>
     
     
 <aside class="fun-fact">
   <div>
-    <h3>Little Known Fact</h3>
+    <h3>Fun Fact</h3>
     <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>.</p>
-    </div>
+  </div>
   <img src="images/westjet-mag-05-17-cover.jpeg" alt="WestJet Magazine May 2017 Cover">
 </aside>
    
