--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,16 @@
 </section>
 
 
+<aside class="aside resume">
+  <p>View my resume.
+  <a class="btn btn-cta" href="#">Resume</a>
+</p>
+</aside>
+
+
 <section class="history">
   <h2>Brief History</h2>
-    <h3>1990's - where it all began</h3>
+    <h3>1990's - how it all began</h3>
     <ul class="about-decade">
       <li><i class="fal fa-gamepad"></i>Played games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
@@ -52,11 +59,11 @@
       <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
 
-    <h3>2000's - beginning of my career</h3>
+    <h3>2000's - professional development</h3>
     <ul class="about-decade">
       <li><i class="fal fa-diploma"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
-      <li><i class="fal fa-desktop"></i>Started my career as a reliability and production engineer at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
+      <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to New York City.</li>
       <li><i class="fal fa-laptop-code"></i>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
     </ul>
@@ -69,7 +76,7 @@
     </ul>
 
 
-    <h3>2020's - no time like the present</h3>
+    <h3>2020's - still going</h3>
     <ul class="about-decade">
       <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
@@ -79,7 +86,7 @@
 </section>
     
     
-<aside class="fun-fact">
+<aside class="aside fun-fact">
   <div>
     <h3>Fun Fact</h3>
     <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>.</p>
