--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,14 @@
 
 <section>
   <h2>What I Do</h2>
-    <ol>
-      <li>18 years experience working at a financial institution.</li>
-      <li>Supported various applications, from authoring platforms to securities lending trading platform.</li>
-      <li>Engaged directly with clients to resolve their issues to their satisfaction.</li>
-      <li>Incident manager ensuring outages were resolved quickly and efficiently.</li>
-      <li>Performed problem management to reduce number of repeat incidents.</li>
-      <li>Alert reduction, reduced noise by preventing false alerts.</li>
-      <li>Automated ready-for-business checks and other manual tasks.</li>
-      <li>Modernized support documentation.</li>
-      <li>Onboarded and integrated new applications, such as PagerDuty.</li>
+    <ol class="experience">
+      <li><em>18</em> years experience working at a top tier financial services company.</li>
+      <li><em>60<span class="suffix">+</span></em>applications supported, from authoring platform to securities lending trading systems.</li>
+      <li><em>33<span class="suffix">%</span></em>yoy decrease in outages due to effict incident management.</li>
+      <li><em>50<span class="suffix">%</span></em>reduction in manual TOIL due to automation.</li>
+      <li><em>17<span class="suffix">%</span></em>yoy reduction in support tickets.</li>
+      <li>Provided high quality service to resolve client facing issues quickly and efficiently.</li>
+      <li>Onboarded and integrated new applications within the team, such as ServiceNow and PagerDuty.</li>
     </ol>
 </section>
 
