--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
     <h3>2000's - professional development</h3>
     <ul class="about-decade">
-      <li><i class="fal fa-diploma"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
+      <li><i class="fa-light fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
       <li><i class="fal fa-desktop"></i>Worked my way up to senior consultant at <a href="https://us.nttdata.com">Keane <em>(now NTT DATA)</em></a>.</li>
       <li><i class="fal fa-map-marker-alt"></i>Moved to New York City.</li>
