--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,12 @@
     <h3>Fun Fact</h3>
     <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>.</p>
   </div>
-  <img src="images/westjet-mag-05-17-cover.jpeg" alt="WestJet Magazine May 2017 Cover">
+  <img srcset="images/westjet-mag-05-17-cover-200w.jpg 1x,
+               images/westjet-mag-05-17-cover-400w.jpg 2x,
+               images/westjet-mag-05-17-cover-600w.jpg 3x,
+               images/westjet-mag-05-17-cover-800w.jpg 4x"
+      src="images/westjet-mag-05-17-cover-200w.jpg"
+      alt="WestJet Magazine May 2017 Cover">
 </aside>
    
 
