Added WestJet article image

--- a/public/index.html
+++ b/public/index.html
@@ -27,21 +27,26 @@
 
 <section>
   <h2>What I Do</h2>
-    <ol class="experience">
+  <p>I do...</p>
+  <ul>
+    <li>Provided high quality service to resolve client facing issues quickly and efficiently.</li>
+    <li>Onboarded and integrated new applications within the team, such as ServiceNow and PagerDuty.</li>
+</ul>
+
+  <h3>Stats</h3>
+    <ul class="experience">
       <li><em>18</em> years experience working at a top tier financial services company.</li>
       <li><em>60<span class="suffix">+</span></em>applications supported, from authoring platform to securities lending trading systems.</li>
       <li><em>33<span class="suffix">%</span></em>yoy decrease in outages due to effict incident management.</li>
       <li><em>50<span class="suffix">%</span></em>reduction in manual TOIL due to automation.</li>
       <li><em>17<span class="suffix">%</span></em>yoy reduction in support tickets.</li>
-      <li>Provided high quality service to resolve client facing issues quickly and efficiently.</li>
-      <li>Onboarded and integrated new applications within the team, such as ServiceNow and PagerDuty.</li>
-    </ol>
+    </ul>
 </section>
 
 
 <aside class="aside resume">
-  <p>View my resume.
-  <a class="btn btn-cta" href="#">Resume</a>
+  <p>View or print my resume.
+  <a class="btn btn-cta" href="resume.html"><i class="fal fa-file"></i> Resume</a>
 </p>
 </aside>
 
@@ -87,14 +92,17 @@
 <aside class="aside fun-fact">
   <div>
     <h3>Fun Fact</h3>
-    <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>.</p>
+    <p>I have a photo published in the <time date="2007-05-01">May 2017</time> issue of <em>WestJet Magazine</em>. Click the image to see!</p>
   </div>
-  <img srcset="images/westjet-mag-05-17-cover-200w.jpg 1x,
+
+  <a href="westjet-article.html">
+    <img srcset="images/westjet-mag-05-17-cover-200w.jpg 1x,
                images/westjet-mag-05-17-cover-400w.jpg 2x,
                images/westjet-mag-05-17-cover-600w.jpg 3x,
                images/westjet-mag-05-17-cover-800w.jpg 4x"
       src="images/westjet-mag-05-17-cover-200w.jpg"
       alt="WestJet Magazine May 2017 Cover">
+  </a>
 </aside>
    
 
