--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
 
 
 <aside class="aside resume">
-  <p>View or print my resume.
-  <a class="btn btn-cta" href="resume.html"><i class="fal fa-file"></i>Resume</a>
+  <span>View or print my resume.</span><a class="btn btn-cta" href="resume.html"><i class="fal fa-file"></i>Resume</a>
 </p>
 </aside>
 
