Some updates to the text

--- a/public/index.html
+++ b/public/index.html
@@ -22,24 +22,21 @@
 <header class="section hero">
   <h1>Hello, I'm&nbsp;Brett.</h1>
   <h2>Software/Support Engineer</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptas iste, rem nihil sunt illum soluta error esse ipsa enim, dignissimos perferendis ducimus consequuntur. Alias voluptatem autem harum ipsa debitis.</p>
+  <p>Something catchy goes here, when I think of it...</p>
 </header>
 
-<section>
+<section class="what-i-do">
   <h2>What I Do</h2>
-  <p>I do...</p>
-  <ul>
-    <li>Provided high quality service to resolve client facing issues quickly and efficiently.</li>
-    <li>Onboarded and integrated new applications within the team, such as ServiceNow and PagerDuty.</li>
-</ul>
+  <p>I use my experience as a software and support engineer to come up with simple solutions to complex problems. I work diligently to ensure mission-critical trading systems are running with zero downtime.</p>
+  <p>Provide white glove service to all of our clients, both internally and externally, to ensure their issues are addressed as quickly and professionally as possible.</p>
 
-  <h3>Stats</h3>
+  <h3>Highlights</h3>
     <ul class="experience">
-      <li><em>18</em> years experience working at a top tier financial services company.</li>
+      <li><em>18</em> years experience working in technology at a Fortune 500 financial services company.</li>
       <li><em>60<span class="suffix">+</span></em>applications supported, from authoring platform to securities lending trading systems.</li>
-      <li><em>33<span class="suffix">%</span></em>yoy decrease in outages due to effict incident management.</li>
-      <li><em>50<span class="suffix">%</span></em>reduction in manual TOIL due to automation.</li>
-      <li><em>17<span class="suffix">%</span></em>yoy reduction in support tickets.</li>
+      <li><em>33<span class="suffix">%</span></em>decrease in outages due to incident management.</li>
+      <li><em>50<span class="suffix">%</span></em>decrease in manual tasks due to automation.</li>
+      <li><em>17<span class="suffix">%</span></em>decrease in support tickets due to effective problem management.</li>
     </ul>
 </section>
 
