Started work on resume

--- a/public/resume.html
+++ b/public/resume.html
@@ -4,11 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume of Brett Baisley</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Brett Baisley's Resume</title>
+    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="resume-print.css" media="print">
     <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    Resume - to be added
+    <header>
+        <h1>Brett Baisley</h1>
+        <div class="flex">
+            <div class="email">noneone@gmail.com</div>
+            <div class="phone">(347) 901-1111</div>
+            <div class="address">Lindenhurst, New York</div>
+        </div>
+    </header>
+
+    <section>
+        <h2>Summary</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi saepe accusamus consectetur tenetur sapiente at enim et ipsam optio dignissimos.</p>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <ul class="skills">
+            <li>skill one</li>
+            <li>skill two</li>
+            <li>skill three</li>
+        </ul>
+    </section>
+    
+    <section>
+        <h2>Professional History</h2>
+        <ul class="employment">
+            <li>
+                <span class="employer"><strong>Morgan Stanley</strong></span>,
+                <span class="job-title">Reliability and Production Engineer</span>
+                <div class="employed-dates">May 2008 - Present</div>
+                <ul>
+                    <li>one</li>
+                    <li>one</li>
+                    <li>one</li>
+                </ul>
+            </li>
+            <li>
+                <span class="employer"><strong>Keane</strong> (now NTTData)</span>,
+                <span class="job-title">Senior Consultant</span>
+                <div class="employed-dates">October 2004 - May 2008</div>
+                <ul>
+                    <li>one</li>
+                    <li>one</li>
+                    <li>one</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+        <ul class="flex education">
+            <li>
+                <div class="school">The George Washington University School of Business</div>
+                <div class="degree">Associate's Certificate, Information Technology Project Management</div>
+            </li>
+            <li>
+                <div class="school">University of New Brunswick</div>
+                <div class="degree">Bachelor of Computer Science</div>
+            </li>
+        </ul>
+    </section>
+    
+
 </body>
 </html>
+<!-- 
+https://www.indeed.com/career-advice/resumes-cover-letters/resume-format-guide-with-examples
+
+first 1/3 of page is a strong "teaser"
+Margin .5 all around
+No graphics, logos, pictures, 
+
+
+Fonts: Use only 3 sizes:
+1. Name 16-18 
+2. Section heading 12-14, making pop (capialize, bold, etc.)
+3. Font 10-12
+Font: times new roman, or arial
+
+
+currnet role - 5 bullet points only
+old roles - 3 bullet points only
+Start with strong action verbs: drove, delivered, led, supported, analyzed, etc.
+Use numbers were possible, team of 5, 20% sales, etc.
+Explain the impact
+
+No:
+Posted 3 times a week on social media
+
+Yes:
+Posted 3 times a week on public social media accounts to re-engage customers, drive online visits and boot brand awareness 
+-->
