Removed resume until complete.

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
 
 <aside class="aside resume">
-  <span>View or print my resume.</span><a class="btn btn-cta" href="resume.html"><i class="fal fa-file"></i>Resume</a>
+  <span>Save or print my resume.</span><a class="btn btn-cta" href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
 </p>
 </aside>
 
