--- a/public/index.html
+++ b/public/index.html
@@ -18,27 +18,51 @@
         </ul>
       </nav>
     -->
+<div class="wip"><p>This is still a work in progress. Open to feedback on how to improve this site.</p></div>
+
+
 
 <header class="section hero">
   <h1>Hello, I'm&nbsp;Brett.</h1>
   <h2>Software/Support Engineer</h2>
-  <p>Something catchy goes here, when I think of it...</p>
+  <p>Something catchy will go here, when I think of it...</p>
 </header>
 
 <section class="what-i-do">
   <h2>What I Do</h2>
-  <p>I use my experience as a software and support engineer to come up with simple solutions to complex problems. I work diligently to ensure mission-critical trading systems are running with zero downtime.</p>
-  <p>Provide white glove service to all of our clients, both internally and externally, to ensure their issues are addressed as quickly and professionally as possible.</p>
+  <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. With many years working in the financial industry, my current role involves working diligently to ensure mission-critical trading systems are running with zero downtime, or as close to zero downtime as possible.</p>
+  <p>I provide high quality, white glove service to all of our clients, both internally and externally. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction.</p>
 
   <h3>Highlights</h3>
     <ul class="experience">
       <li><em>18</em> years experience working in technology at a Fortune 500 financial services company.</li>
       <li><em>60<span class="suffix">+</span></em>applications supported, from authoring platform to securities lending trading systems.</li>
-      <li><em>33<span class="suffix">%</span></em>decrease in outages due to incident management.</li>
-      <li><em>50<span class="suffix">%</span></em>decrease in manual tasks due to automation.</li>
+      <li><em>33<span class="suffix">%</span></em>decrease in outages due to ongoing incident management.</li>
+      <li><em>30<span class="suffix">%</span></em>decrease in manual / repetative tasks due to automation.</li>
       <li><em>17<span class="suffix">%</span></em>decrease in support tickets due to effective problem management.</li>
     </ul>
-</section>
+
+  <h3>Skills</h3>
+  <h4>Technical Skills</h4>
+  <ul class="skills">
+    <li>Windows / Linux</li>
+    <li>HTML / CSS / Javascript</li>
+    <li>React</li>
+    <li>Python / Shell Scripting</li>
+    <li>Database / SQL (DB2 and Sybase</li>
+    <li>Azure Cloud Fundamentals</li>
+  </ul>
+
+  <h4>Soft Skills</h4>
+  <ul class="skills">
+    <li>ITIL Fundamentals</li>
+    <li>Agile Methodologies</li>
+    <li>Open Minded / Team Player</li>
+    <li>Critical Thinker</li>
+    <li>Project Managment</li>
+  </ul>
+  </section>
+
 
 
 <aside class="aside resume">
