--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US" dir="ltr">
   <head>
-    <script src="https://kit.fontawesome.com/ec6ddacbdf.js" crossorigin="anonymous"></script>
+    <title>Brett Baisley - Work In Progress</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Brett Baisley - Work In Progress</title>
+    <meta name="description" content="This is the personal website of Brett Baisley. A software/support engineer that is currently learning the latest in web design.">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
   </head>
@@ -30,8 +30,9 @@
 
 <section class="what-i-do">
   <h2>What I Do</h2>
-  <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. With many years working in the financial industry, my current role involves working diligently to ensure mission-critical trading systems are running with zero downtime, or as close to zero downtime as possible.</p>
-  <p>I provide high quality, white glove service to all of our clients, both internally and externally. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction.</p>
+  <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is acheived by breaking complicated problems down into smaller, distinct issues and solving each of those.</p>
+  <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right, and they are pleased with the result.</p>
+  <p>My current role is on a team that works to ensure our mission-critical trading systems are running with zero downtime. In today's fast paced world, clients expect to execute trades in seconds, and when they can't, they trade with competitors. For us, the phrase <em>every second counts</em> is the difference between us making money or losing money.</p>
 
   <h3>Highlights</h3>
     <ul class="experience">
@@ -45,11 +46,17 @@
   <h3>Skills</h3>
   <h4>Technical Skills</h4>
   <ul class="skills">
-    <li>Windows / Linux</li>
-    <li>HTML / CSS / Javascript</li>
+    <li>Windows</li>
+    <li>Linux</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Javascript</li>
     <li>React</li>
-    <li>Python / Shell Scripting</li>
-    <li>Database / SQL (DB2 and Sybase</li>
+    <li>Python</li>
+    <li>Shell Scripting</li>
+    <li>SQL</li>
+    <li>Agile</li>
+    <li>DevOps</li>
     <li>Azure Cloud Fundamentals</li>
   </ul>
 
@@ -66,19 +73,20 @@
 
 
 <aside class="aside resume">
-  <span>Save or print my resume.</span><a class="btn btn-cta" href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
+  <span>Save or print my resume.</span>
+  <a class="btn btn-cta" href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
 </p>
 </aside>
 
 
 <section class="history">
   <h2>Brief History</h2>
-    <h3>1990's - how it all began</h3>
+    <h3>1990's - how IT all began</h3>
     <ul class="about-decade">
-      <li><i class="fal fa-gamepad"></i>Played games on a Commodore 64.</li>
+      <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
       <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
-      <li><i class="fal fa-browser"></i>Created websites using an Intel 386 PC.</li>
-      <li><i class="fal fa-wrench"></i>Spent weekends repairing/building desktops for family and friends.</li>
+      <li><i class="fal fa-browser"></i>Created my frist websites using an Intel 386 PC.</li>
+      <li><i class="fal fa-wrench"></i>Spent weekends repairing desktops for family and friends.</li>
       <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
     </ul>
 
@@ -99,7 +107,7 @@
     </ul>
 
 
-    <h3>2020's - still going</h3>
+    <h3>2020's - still going strong</h3>
     <ul class="about-decade">
       <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
       <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
