Adding Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="This is the personal website of Brett Baisley. A software/support engineer that is currently learning the latest in web design.">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a7eaee4ed0.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2BQTP5W95"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-F2BQTP5W95');
+    </script>
   </head>
   
   <body>
