--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,6 @@
         </ul>
       </nav>
     -->
-  <div class="wip"><p>This is still a work in progress. Open to feedback on how to improve this site.</p></div>
-
-
 
   <header class="section hero">
     <h1>Hello, I'm&nbsp;Brett.</h1>
@@ -38,16 +35,21 @@
 
   <section class="what-i-do">
     <h2>What I Do</h2>
-    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is acheived by breaking complicated problems down into smaller, distinct issues and solving each of those.</p>
-    <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right, and they are pleased with the result.</p>
-    <p>My current role is on a team that works to ensure our mission-critical trading systems are running with zero downtime. In today's fast paced world, clients expect to execute trades in seconds, and when they can't, they trade with competitors. For us, the phrase <em>every second counts</em> is the difference between us making money or losing money.</p>
+    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is acheived by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
+    <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right.</p>
+    <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world, clients expect to execute trades in seconds, and our platform is used by traders globally.</p>
+    <p></p>
+
+    <!--
+    Automated TOIL using various things like Apica, Selenium scripts
+    -->
 
     <h3>Highlights</h3>
       <ul class="experience">
-        <li><em>18</em> years experience working in technology at a Fortune 500 financial services company.</li>
+        <li><em>18</em> years experience working in technology at a Fortune 500 financial service company.</li>
         <li><em>60<span class="suffix">+</span></em>applications supported, from authoring platform to securities lending trading systems.</li>
         <li><em>33<span class="suffix">%</span></em>decrease in outages due to ongoing incident management.</li>
-        <li><em>30<span class="suffix">%</span></em>decrease in manual / repetative tasks due to automation.</li>
+        <li><em>30<span class="suffix">%</span></em>decrease in manual tasks / toil due to automation.</li>
         <li><em>17<span class="suffix">%</span></em>decrease in support tickets due to effective problem management.</li>
       </ul>
 
@@ -56,25 +58,41 @@
     <ul class="skills">
       <li>Windows</li>
       <li>Linux</li>
+      <li>MacOS</li>
       <li>HTML</li>
       <li>CSS</li>
       <li>Javascript</li>
       <li>React</li>
+      <li>Node.js</li>
       <li>Python</li>
       <li>Shell Scripting</li>
       <li>SQL</li>
-      <li>Agile</li>
-      <li>DevOps</li>
-      <li>Azure Cloud Fundamentals</li>
+      <li>Azure Cloud</li>
+      <li>Git/GitHub</li>
+      <li>Selenium</li>
+      <li>Splunk</li>
+      <li>Prometheus</li>
+      <li>Grafana</li>
+      <li>Apica</li>
+      <li>AppDynamics</li>
+      <li>Kafka</li>
+      <li>Autosys</li>
     </ul>
-
+    
     <h4>Soft Skills</h4>
     <ul class="skills">
+      <li>Agile</li>
+      <li>DevOps</li>
+      <li>SRE</li>
       <li>ITIL Fundamentals</li>
-      <li>Agile Methodologies</li>
-      <li>Open Minded / Team Player</li>
+      <li>Problem Solving</li>
+      <li>Automation</li>
+      <li>TOIL Reduction</li>
+      <li>Team Player</li>
       <li>Critical Thinker</li>
       <li>Project Managment</li>
+      <li>Disaster Recovery</li>
+      <li>Capacity Management</li>
     </ul>
     </section>
 
