Split kids into separate li's

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,8 @@
       <ul class="about-decade">
         <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
         <li><i class="fal fa-house"></i>Bought our first house.</li>
-        <li><i class="fal fa-child"></i>Became a father to two boys, Mateo and Lucas.</li>
+        <li><i class="fal fa-child"></i>Became a first time father...</li>
+        <li><i class="fal fa-child"></i>...and again, 13 months later.</li>
       </ul>
 
 
