--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,11 @@
 
   <section class="what-i-do">
     <h2>What I Do</h2>
-    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is acheived by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
+    <p>I use my experience as a software and support engineer to come up with elegant solutions to complex problems. This is achieved by breaking down complicated problems into smaller, distinct issues and solving each separately.</p>
     <p>I provide high quality, white glove service to all of my clients. I strive to ensure their issues are addressed as quickly and professionally as possible, and to their utmost satisifaction. I want them to walk away confident that the work was done right.</p>
-    <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world, clients expect to execute trades in seconds, and our platform is used by traders globally.</p>
-    <p></p>
+    <p>My current role is on a team ensuring our mission-critical trading systems are running with zero downtime. In today's fast paced world global economy, clients need to be able to execute trades, anytime, anywhere. To acheive this, we are using some of the latest technologies, such as Apache Kafka, while moving some of our core applications to Microsoft's Azure cloud.</p>
+    <p>Recently started to perform more site reliability engineer (SRE) tasks, in that I am working to automate manual toil via python/shell scripts, automate ready for business (RFB) checks in tooks like Apica and Selenium, monitoring SLI/SLO's via products such as AppDynamics, Prometheus and Grafana.</p>
 
-    <!--
-    Automated TOIL using various things like Apica, Selenium scripts
-    -->
 
     <h3>Highlights</h3>
       <ul class="experience">
@@ -101,13 +98,12 @@
   <aside class="aside resume">
     <span>Save or print my resume.</span>
     <a class="btn btn-cta" href="assets/brett-baisley-resume.docx"><i class="fal fa-file-word"></i>Resume</a>
-  </p>
   </aside>
 
 
   <section class="history">
     <h2>Brief History</h2>
-      <h3>1990's - how IT all began</h3>
+      <h3>1990's - How IT All Began</h3>
       <ul class="about-decade">
         <li><i class="fal fa-gamepad"></i>Played video games on a Commodore 64.</li>
         <li><i class="fal fa-typewriter"></i>Completed homework assignments on an Amiga 2000.</li>
@@ -116,7 +112,7 @@
         <li><i class="fal fa-newspaper"></i>Worked after school as a front-end designer for the local newspaper.</li>
       </ul>
 
-      <h3>2000's - professional development</h3>
+      <h3>2000's - Professional Development</h3>
       <ul class="about-decade">
         <li><i class="fa-light fa-graduation-cap"></i>Received a Bachelor of Computer Science degree from <a href="https://unb.ca">UNB</a>.</li>
         <li><i class="fal fa-map-marker-alt"></i>Moved to Halifax, Nova Scotia.</li>
@@ -125,7 +121,7 @@
         <li><i class="fal fa-laptop-code"></i>Hired as a reliability and production engineer at <a href="https://morganstanley.com">Morgan Stanley</a>.</li>
       </ul>
 
-      <h3>2010's - embraced adulthood</h3>
+      <h3>2010's - Embracing Adulthood</h3>
       <ul class="about-decade">
         <li><i class="fal fa-rings-wedding"></i>Got married to my wife, Enerlise.</li>
         <li><i class="fal fa-house"></i>Bought our first house.</li>
@@ -134,7 +130,7 @@
       </ul>
 
 
-      <h3>2020's - still going strong</h3>
+      <h3>2020's - Still Going Strong</h3>
       <ul class="about-decade">
         <li><i class="fal fa-repeat"></i>Moved to the Securities Lending support team.</li>
         <li><i class="fal fa-house-user"></i>Spent a lot of time working from home due to COVID-19.</li>
